# php-qt

./: CMakeLists.txt  COPYING  CREDITS  ChangeLog  README  README.md
cmake/modules/: FindPHP5.cmake  FindQScintilla.cmake  FindQwt.cmake  FindQwt5.cmake
examples/calculator/: button.php  calculator.php  main.php
kalyptus/: kalyptus  kalyptusCxxToCSharp.pm  kalyptusCxxToECMA.pm  kalyptusCxxToKimono.pm  kalyptusCxxToSmoke.pm  kalyptusCxxToSwig.pm  kalyptusDataDict.pm
smoke/: CMakeLists.txt  smoke.h
smoke/kde/: CMakeLists.txt  generate.pl.cmake  generate.pl.in  generate_makefile_am.pl  header_list  kde_header_list  qt_smoke.h  qtguess.pl.cmake
smoke/plasma/: CMakeLists.txt  generate.pl.cmake  plasma_header_list  qtguess.pl.cmake
smoke/qt/: CMakeLists.txt  configure.in.in  generate.pl.cmake  generate.pl.in  qscintilla2_header_list  qscintilla_header_list  qt_smoke.h  qwt_header_list
src/: CMakeLists.txt  context.cpp  context.h  functions.cpp  handlers.cpp  marshall.h  marshall_basetypes.h  marshall_primitives.h  marshall_types.cpp  marshall_types.h  php_qt.cpp  php_qt.h  phpqt_internals.cpp  phpqt_internals.h  qstring.cpp  qstring.h  smokephp.cpp  smokephp.h  zend_handlers.cpp  zend_handlers.h
tests/: QStringTestCase.php  QtAdvancedTestCase.php  QtApplicationTestCase.php  QtBasicTestCase.php  QtLoadModuleTestCase.php  QtStressTestCase.php  box2buttons.php  designer.php  phpqt_from_scratch.sh  qFunctions.php  unicode.php  unicode.xml
tools/: CMakeLists.txt
tools/uic/: CMakeLists.txt  customwidgetsinfo.cpp  customwidgetsinfo.h  databaseinfo.cpp  databaseinfo.h  driver.cpp  driver.h  globaldefs.h  main.cpp  option.h  qclass_lib_map.h  treewalker.cpp  treewalker.h  ui4.cpp  ui4.h  uic.cpp  uic.h  uic.pro  utils.h  validator.cpp  validator.h
tools/uic/php/: phpextractimages.cpp  phpextractimages.h  phpwritedeclaration.cpp  phpwritedeclaration.h  phpwriteicondata.cpp  phpwriteicondata.h  phpwriteicondeclaration.cpp  phpwriteicondeclaration.h  phpwriteiconinitialization.cpp  phpwriteiconinitialization.h  phpwriteincludes.cpp  phpwriteincludes.h  phpwriteinitialization.cpp  phpwriteinitialization.h
tutorials/t1/: main.php
tutorials/t10/: cannonfield.php  lcdrange.php  main.php
tutorials/t11/: cannonfield.php  lcdrange.php  main.php
tutorials/t2/: main.php
tutorials/t3/: main.php
tutorials/t4/: main.php
tutorials/t5/: main.php
tutorials/t6/: main.php
tutorials/t7/: main.php
tutorials/t8/: cannonfield.php  lcdrange.php  main.php
tutorials/t9/: cannonfield.php  lcdrange.php  main.php
